# somenergia-tomatic

./: .babelrc  .env  .gitignore  .prettierrc.json  .travis.yml  CHANGES.md  Makefile  README.md  README.rst  TODO.md  areavoip_dailyreport.py  areavoip_dailyreport.sh  asterisk.py  back2back.yaml  carrega-exemple.csv  carrega.csv  claims_dict.yaml  config-example.yaml  config.yaml  create_atc_case.py  crontab  crontab-dailyreport.sh  crontab-warnturn.sh  dbconfig-example.py  dragAndDrop.js  execution_example.sh  extensions.html  holidays.conf  hores.csv  htmlgen.py  indisponibilitats-example.conf  logicaCompensacioHores.md  mongo.py  oneshot-example.conf  package.json  pbxmockup.py  pyproject.toml  queuequeries.sql  runhere  schedulehours.py  (+28 more)
2015-03-30-setmana-santa/: config.yaml  indisponibilitats.conf  torns.csv
b2bdata/: 2days2lines_graella-telefons-2019-11-11_expected.  2days2lines_graella-telefons-2019-11-11_expected.html  2days2lines_graella-telefons-2019-11-11_expected.yaml  2days2lines_status_expected.yaml  3days6lines_graella-telefons-2019-11-18_expected.html  3days6lines_graella-telefons-2019-11-18_expected.yaml  3days6lines_status_expected.yaml  4days6lines_graella-telefons-2019-10-28_expected.html  4days6lines_graella-telefons-2019-10-28_expected.yaml  4days6lines_status_expected.yaml  load-2020-03-02_carrega-2020-03-02_expected.csv  load-2020-03-02_carrega-2020-03-02_expected.yaml  load-2020-03-02_overload-2020-03-02_expected.yaml  load-2020-03-02_ponderatedideal-2020-03-02_expected.yaml  load-and-schedule-2-days-2-lines-minizinc_carrega_expected.csv  load-and-schedule-2-days-2-lines-minizinc_graella-telefons-2022-07-11_expected.html  load-and-schedule-2-days-2-lines-minizinc_graella-telefons-2022-07-11_expected.yaml  load-and-schedule-2-days-2-lines-minizinc_overload_expected.yaml  load-and-schedule-2-days-2-lines-minizinc_ponderatedideal-2022-07-11_expected.yaml  load-and-schedule-2-days-2-lines-minizinc_status_expected.yaml  load-and-schedule-2-days-2-lines_carrega-2022-07-11_expected.yaml  load-and-schedule-2-days-2-lines_graella-telefons-2022-07-11_expected.html  load-and-schedule-2-days-2-lines_graella-telefons-2022-07-11_expected.yaml  load-and-schedule-2-days-2-lines_status_expected.yaml  load-and-schedule-2-days-4-lines_carrega-2022-07-11_expected.yaml  load-and-schedule-2-days-4-lines_carrega_expected.csv  load-and-schedule-2-days-4-lines_graella-telefons-2022-07-11_expected.html  load-and-schedule-2-days-4-lines_graella-telefons-2022-07-11_expected.yaml  load-and-schedule-2-days-4-lines_overload_expected.yaml  load-and-schedule-2-days-4-lines_status_expected.yaml  load-forgiving-2020-03-02_carrega-2020-03-02_expected.yaml  minizinc-2023-08-07-many-holidays_carrega-2023-08-07_expected.yaml  minizinc-2023-08-07-many-holidays_carrega_expected.csv  minizinc-2023-08-07-many-holidays_graella-telefons-2023-08-07_expected.html  minizinc-2023-08-07-many-holidays_graella-telefons-2023-08-07_expected.yaml  minizinc-2023-08-07-many-holidays_ponderatedideal-2023-08-07_expected.yaml  minizinc-2023-08-07-many-holidays_status_expected.yaml  short_graella-telefons-2019-10-28_expected.yaml  tomatic.claims_test.Claims_Test.test_atcCategories-expected  tomatic.claims_test.Claims_Test.test_categories-expected  (+1 more)
callinfo/: info_types.txt
doc/: architecture-context.dia  architecture-context.md  claims.md  claims.py  cli-tools.md  development.md  glossary.md  logicaCompensacioHores.md  restriccionsipenalitzacions.md  setup.md  shiftloadprocess.dot  tomatic-context.dia  tomatic-context.md  userguide.md  userguides.md
info_cases/: info_cases.yaml
legacy/: asterisk_test.py
mithrilspike/: graella-2016-02-02.json  graella-2016-02-02.yaml  (+2 more)
(+359 files in other folders)
