[build-system]
requires = ["setuptools>=24", "wheel"]

[project]
name = "tomatic"
dynamic=["version"]
description = "Phone Support Helper"
authors = [
    { name="Som Energia", email="itcrowd@somenergia.coop" },
]
readme = "README.md"
requires-python = ">=3.9.4"
license = { text = "GNU Affero General Public License v3 or later (GPLv3+)" }
keywords = ["support service", "phone support", "crm", "pbx"]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Environment :: Console',
    'Topic :: Communications :: Internet Phone',
    'Topic :: Communications :: Telephony',
    'Intended Audience :: Customer Service',
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
    'Operating System :: OS Independent',
]
dependencies = [
    'MarkupSafe',
    'somutils>=1.9', # use of enterContext
    'tomato-cooker>=0.4.0', # api changed
    'yamlns==0.10.0',
    'consolemsg',
    'py-Asterisk',
    'paramiko',
    'python-slugify',
    'deansi',
    #'ooop==0.2.2-xt',
    'click',
    'decorator',
    'requests',
    'ERPpeek',
    'psutil', # execution
    'pony',
    'emili',
    'fastapi>=0.110', # Using new api
    'pydantic>=2', # Using new api
    'python-multipart', # formdata in fastapi
    'uvicorn[standard]', # server for fastapi (standard for websockets)
    'aiofiles', # Static files for fastapi
    'elasticsearch<8', # 8 version is incompatible with irontec server
    'urllib3<2', # indirect, restriction from elasticsearch
    'ics<0.8', # icalendar generation. 0.8 changes interface and not yet available in all Pythons
    'itsdangerous', # auth
    'authlib>=1.3', # auth, api changes
    'httpx',
    'python-jose[cryptography]', # auth
    'pandas',
    'matplotlib',
    'typer',
    'python-stdnum',
    # Test
    'pytest-cov',
    'pytest',
    'coverage',
    'b2btest',
    'erppeek',
    'ERPPeek-WST',
    'mock',
]

[tool.setuptools]
script-files=[
    'runhere',
    'scripts/areavoip_callapi.py',
    'scripts/areavoip_dumpstats.sh',
    'scripts/execution_example.sh',
    'scripts/crontab-dailyreport.sh',
    'scripts/crontab-warnturn.sh',
    'scripts/crontab-launchtimetable.sh',
    'scripts/tomatic_api.py',
    'scripts/tomatic_busy.py',
    'scripts/tomatic_callinfo.py',
    'scripts/tomatic_calls.py',
    'scripts/tomatic_dailyreport.py',
    'scripts/tomatic_extensions.py',
    'scripts/tomatic_import_data.py',
    'scripts/tomatic_mergeshifts.py',
    'scripts/tomatic_resetshiftcredit.sh',
    'scripts/tomatic_retrieve.py',
    'scripts/tomatic_rtqueue.py',
    'scripts/tomatic_timetable.py',
    'scripts/tomatic_timetablelauncher.py',
    'scripts/tomatic_says.py',
    'scripts/tomatic_scheduler.py',
    'scripts/tomatic_shiftload.py',
    'scripts/tomatic_stats.py',
    'scripts/tomatic_uploadtimetable.py',
]

[tool.setuptools.dynamic]
version = {attr = "tomatic.__version__"}

#[project.scripts]
#representa-manage = "scripts.representa_manage:app"

[project.urls]
Homepage = "https://somenergia.coop"
Repository = 'https://github.com/Som-Energia/somenergia-tomatic'
Documentation = "https://github.com/som-energia/somenergia-tomatic/blob/master/README.md"
Changelog = "https://github.com/som-energia/somenergia-tomatic/blob/master/CHANGES.md"

[tool.setuptools.packages]

find = {}

[tool.coverage.run]
relative_files = true
branch = true
omit = ["**/*test.py"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=tomatic --cov-config=pyproject.toml"
testpaths = [
    'tomatic'
]


